--- a/requirements.yml
+++ b/requirements.yml
@@ -1,4 +1,4 @@
-name: phd-fundamentals-3.7
+name: quantum-enhanced-selection
 channels:
   - defaults
 dependencies:
@@ -334,4 +334,4 @@ dependencies:
     - zipp==3.1.0
     - zope-event==4.5.0
     - zope-interface==5.2.0
-prefix: /Users/davidvondollen/opt/anaconda3/envs/phd-fundamentals-3.7
+
