--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ dwave-system = "^1.23.0"
 pandas = "^2.2.1"
 dwave-greedy = "^0.3.0"
 iohexperimenter = "^0.2.9.2"
+scikit-learn = "^1.4.1.post1"
+gym = "^0.26.2"
 
 
 [build-system]
